--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,6 @@ production:
   database: furima_31702_production
   username: furima_31702
   password: <%= ENV['FURIMA_31702_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
